Fix Android NDK setup in GitHub Actions
- Add id: setup-ndk to Android NDK setup step
- This allows the step output to be properly referenced as steps.setup-ndk.outputs.ndk-path
- Fixes "ANDROID_NDK_HOME not set!" error in build script

The build script requires ANDROID_NDK_HOME to be set and was failing
because the step reference was not working without the proper step ID.

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -45,6 +45,7 @@ jobs:
         cache: true
 
     - name: 🔧 Set up Android NDK
+      id: setup-ndk
       uses: nttld/setup-ndk@v1
       with:
         ndk-version: r26d
