Fix critical build errors for multi-platform CI/CD
- Remove invalid aarch64-apple-ios-sim target from iOS workflow and build script
- Fix FFI type arguments in test_address_format.dart for proper function lookups
- Attempt fix for receive_screen.dart syntax errors (still needs investigation)
- These fixes should resolve the most critical compilation blockers

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -136,7 +136,7 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: ${{ env.RUST_VERSION }}
-        targets: aarch64-apple-ios,x86_64-apple-ios,aarch64-apple-ios-sim
+        targets: aarch64-apple-ios,x86_64-apple-ios
 
     - name: 🔍 Verify Rust targets
       run: |
