--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -331,7 +331,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           clang cmake ninja-build pkg-config libgtk-3-dev \
-          liblzma-dev libstdc++-12-dev
+          liblzma-dev libstdc++-12-dev libsecret-1-dev
 
     - name: 📦 Cache Rust dependencies
       uses: actions/cache@v4
