Fix Rust library bundling for all platforms
- Updated Linux build script to copy libraries to build/native_assets/linux/ for CMake
- Created comprehensive setup-native-assets.sh script to ensure libraries are in correct locations
- Added native assets setup step to GitHub Actions workflow for Linux and Windows
- This fixes the CMake error about missing native_assets directory
- Ensures Rust libraries are properly bundled into final application packages

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -395,6 +395,11 @@ jobs:
         # Working in root directory
         flutter analyze --no-fatal-infos --no-fatal-warnings || true
 
+    - name: 🔧 Setup native assets for Linux
+      run: |
+        chmod +x .github/scripts/setup-native-assets.sh
+        .github/scripts/setup-native-assets.sh
+
     - name: 🏗️ Build Linux app
       run: |
         # Working in root directory
@@ -483,6 +488,10 @@ jobs:
       run: |
         # Working in root directory
         flutter analyze --no-fatal-infos --no-fatal-warnings || true
+
+    - name: 🔧 Setup native assets for Windows
+      run: |
+        .github/scripts/setup-native-assets.sh
 
     - name: 🏗️ Build Windows app
       run: |
