Fix macOS/iOS Rust library bundling
- Added fix-macos-library-bundle.sh to copy dylib into app bundle
- Added fix-ios-library-bundle.sh to verify iOS library is in place
- Updated workflow to run library bundling fix after macOS build
- This ensures the 58MB Rust library is included in the final app
- Fixes issue where app was only 68MB without Rust backend

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -306,6 +306,11 @@ jobs:
         # Working in root directory
         flutter build macos --release
 
+    - name: 🔧 Fix macOS library bundling
+      run: |
+        chmod +x .github/scripts/fix-macos-library-bundle.sh
+        .github/scripts/fix-macos-library-bundle.sh
+
     - name: 📦 Create macOS ZIP archive
       run: |
         cd build/macos/Build/Products/Release
