Fix Linux and iOS library bundling
- Added fix-linux-library-bundle.sh to copy .so file into bundle/lib
- Added iOS library verification before build
- Updated workflows to ensure libraries are bundled
- Linux: Copies libbitcoinz_wallet_rust.so to bundle/lib directory
- iOS: Verifies library is in place before building
- This should fix the small app sizes (65MB Linux, 34MB iOS)

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -207,6 +207,11 @@ jobs:
         # Working in root directory
         flutter analyze --no-fatal-infos --no-fatal-warnings || true
 
+    - name: 🔧 Verify iOS library linking
+      run: |
+        chmod +x .github/scripts/fix-ios-library-bundle.sh
+        .github/scripts/fix-ios-library-bundle.sh
+
     - name: 🏗️ Build iOS app (no codesign)
       run: |
         # Working in root directory
@@ -409,6 +414,11 @@ jobs:
       run: |
         # Working in root directory
         flutter build linux --release
+
+    - name: 🔧 Fix Linux library bundling
+      run: |
+        chmod +x .github/scripts/fix-linux-library-bundle.sh
+        .github/scripts/fix-linux-library-bundle.sh
 
     - name: 📦 Create Linux tar.gz archive
       run: |
