Fix iOS Rust library linking in Xcode configuration

--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -1,2 +1,5 @@
 #include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
 #include "Generated.xcconfig"
+
+// Link Rust library
+OTHER_LDFLAGS = $(inherited) -force_load "${SRCROOT}/Frameworks/libbitcoinz_wallet_rust.a"
