Fix iOS build - create working Rust build script
- iOS was only 34MB because Rust library was not being built or included
- Created new build_rust_ios.sh that builds from correct 'rust' directory
- Builds for iOS device (arm64) and simulators (x86_64, arm64-sim)
- Creates universal static library with lipo
- Copies to ios/Frameworks/libbitcoinz_wallet_rust.a
- Library includes embedded Zcash params (~49MB)
- Updated workflow to use new script
- Expected iOS size after fix: ~100MB (like other platforms)

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -187,7 +187,8 @@ jobs:
     - name: 🔨 Build Rust libraries for iOS
       run: |
         # Working in root directory
-        .github/scripts/build-rust-ios.sh
+        # Use the new script that builds from correct rust directory
+        ./scripts/build_rust_ios.sh
 
     # Flutter Rust Bridge bindings already generated and committed
     # Skipping generation step to avoid package dependency issues
