--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -360,7 +360,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           clang cmake ninja-build pkg-config libgtk-3-dev \
-          liblzma-dev libstdc++-12-dev libsecret-1-dev
+          liblzma-dev libstdc++-12-dev libsecret-1-dev \
+          rpm dpkg-dev
 
     - name: 📦 Cache Rust dependencies
       uses: actions/cache@v4
@@ -421,7 +422,21 @@ jobs:
         chmod +x .github/scripts/fix-linux-library-bundle.sh
         .github/scripts/fix-linux-library-bundle.sh
 
-    - name: 📦 Create Linux tar.gz archive
+    - name: 📦 Install flutter_distributor
+      run: |
+        dart pub global activate flutter_distributor
+
+    - name: 📦 Build Linux packages
+      run: |
+        # Build Debian package
+        flutter_distributor package --platform linux --targets deb
+        # Build RPM package
+        flutter_distributor package --platform linux --targets rpm
+        # Build AppImage
+        flutter_distributor package --platform linux --targets appimage
+      continue-on-error: true
+
+    - name: 📦 Create Linux tar.gz archive (fallback)
       run: |
         cd build/linux/x64/release
         tar -czf BitcoinZ-Black-Amber-Linux.tar.gz bundle/
@@ -430,7 +445,11 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: linux-app
-        path: build/linux/x64/release/BitcoinZ-Black-Amber-Linux.tar.gz
+        path: |
+          dist/*.deb
+          dist/*.rpm
+          dist/*.AppImage
+          build/linux/x64/release/BitcoinZ-Black-Amber-Linux.tar.gz
 
   # ================================
   # WINDOWS BUILD
@@ -515,7 +534,15 @@ jobs:
         # Try to build without the install step that's failing
         flutter build windows --release --no-tree-shake-icons
 
-    - name: 📦 Create Windows ZIP archive
+    - name: 📦 Build Windows MSIX installer
+      run: |
+        # Install MSIX package tool
+        flutter pub get
+        # Create MSIX installer
+        flutter pub run msix:create
+      continue-on-error: true
+
+    - name: 📦 Create Windows ZIP archive (fallback)
       run: |
         # Navigate to the Release directory and create the ZIP
         cd build/windows/x64/runner/Release
@@ -525,7 +552,9 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: windows-app
-        path: build/windows/x64/runner/Release/BitcoinZ-Black-Amber-Windows.zip
+        path: |
+          build/windows/x64/runner/Release/*.msix
+          build/windows/x64/runner/Release/BitcoinZ-Black-Amber-Windows.zip
 
   # ================================
   # RELEASE CREATION
@@ -549,7 +578,11 @@ jobs:
           artifacts/android-apk/*.apk
           artifacts/android-apk/*.aab
           artifacts/macos-app/*.zip
+          artifacts/linux-app/*.deb
+          artifacts/linux-app/*.rpm
+          artifacts/linux-app/*.AppImage
           artifacts/linux-app/*.tar.gz
+          artifacts/windows-app/*.msix
           artifacts/windows-app/*.zip
         body: |
           ## 🎉 BitcoinZ Black Amber Release
@@ -560,8 +593,8 @@ jobs:
           - **Android**: APK files for all architectures + Play Store AAB
           - **iOS**: Contact for TestFlight/App Store version
           - **macOS**: Universal app bundle (Intel + Apple Silicon)
-          - **Linux**: Portable application bundle
-          - **Windows**: Portable application bundle
+          - **Linux**: DEB/RPM packages, AppImage, and portable tar.gz
+          - **Windows**: MSIX installer and portable ZIP
           
           ### ⚡ Optimized for Battery Life
           This release includes significant logging optimizations for better battery performance on mobile devices.
